//  Copyright (c), 2025, John Manferdelli, Paul England and
//  Datica Research.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// -----------------------------------------------------------------------------
//  cryptstore protobufs
// -----------------------------------------------------------------------------

syntax="proto2";

message cryptstore_entry {
  optional string tag                       = 1;
  optional string type                      = 2;
  optional int32 version                    = 3;
  optional bytes time_entered               = 4;
  optional bytes blob                       = 5;
  optional bool exportable                  = 6;
};

message cryptstore {
  repeated cryptstore_entry entries         = 1;
};
